[gd_scene load_steps=5 format=3 uid="uid://b1c8fk06nj6ep"]

[ext_resource type="Script" path="res://Assets/GUI/InitializeGame/InitializeGame.gd" id="1_00ajb"]
[ext_resource type="PackedScene" uid="uid://385uped2d8nh" path="res://Assets/GUI/Misc/PlayerInformation.tscn" id="1_6q6jg"]
[ext_resource type="Theme" uid="uid://bj2q0bvxlmix" path="res://Assets/GUI/Fonts/BombahBrosTheme.tres" id="1_tu5mr"]
[ext_resource type="PackedScene" uid="uid://fnxolftklj0t" path="res://Assets/GUI/Misc/MapSelection.tscn" id="4_8wr5c"]

[node name="InitializeGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tu5mr")
script = ExtResource("1_00ajb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InformationContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 70

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/InformationContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/InformationContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="HostInformation" parent="PanelContainer/InformationContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_6q6jg")]
layout_mode = 2
host_label = true

[node name="MapSelection" parent="PanelContainer/InformationContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_8wr5c")]
layout_mode = 2

[node name="PlayerInformation" parent="PanelContainer/InformationContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_6q6jg")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/InformationContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = -45

[node name="WaitingLabel" type="Label" parent="PanelContainer/InformationContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Waiting for host to start..."

[node name="GameIDContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_bottom = 85

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/GameIDContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="CopyGameIDButton" type="Button" parent="PanelContainer/GameIDContainer/HBoxContainer"]
layout_mode = 2
text = "Copy Game ID"

[node name="ButtonContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 400

[node name="BackButton" type="Button" parent="PanelContainer/ButtonContainer/HBoxContainer"]
layout_mode = 2
text = "Disconnect"

[node name="StartButton" type="Button" parent="PanelContainer/ButtonContainer/HBoxContainer"]
layout_mode = 2
text = "Start Game"

[connection signal="pressed" from="PanelContainer/GameIDContainer/HBoxContainer/CopyGameIDButton" to="." method="_on_copy_game_id_button_pressed"]
[connection signal="pressed" from="PanelContainer/ButtonContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PanelContainer/ButtonContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
